syntax = "proto3";

package com.ruyuan2020.im;

option java_multiple_files = true;
option java_package = "com.ruyuan2020.im.common.protobuf";
option java_outer_classname = "MessagePushProto";

message MessagePush {
  uint32 chatType = 1;
  uint64 messageId = 2;
  string content = 3;
  uint64 sequence = 4;
  uint64 timestamp = 5;
  uint64 chatId = 6;
  uint64 fromId = 7;
  uint64 memberId = 8;
  uint32 messageType = 9;
}